[tool.poetry]
name = "pass_gen"
version = "0.1.0"
description = ""
authors = ["Philip Walsh <59885325+Philip-Walsh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^3.1.0"
flake8 = "^7.0.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true